--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ axum = "0.8.8"
 chrono = "0.4.42"
 colored = "3.0.0"
 dotenvy = "0.15.7"
+libsql = "0.9.29"
 serde = { version = "1.0.228", features = ["std", "derive"] }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
